# PET_MR_CT

./: .gitignore  .python-version  CLAUDE.md  README.md  pyproject.toml
configs/: segment_metadata_moose.json  segment_metadata_totalseg.json
docker/: Dockerfile
docs/: convert-module-progress.md
docs/superpowers/plans/: 2026-03-22-convert-module.md
docs/superpowers/specs/: 2026-03-22-convert-module-design.md
scripts/: generate_test_data.py  trial_dcmseg.py  verify_dcmseg.py
src/pet_mr_ct/: __init__.py  cli.py
src/pet_mr_ct/convert/: __init__.py  dcm_to_nifti.py  nifti_to_dcmseg.py  nifti_to_rtstruct.py  terminology.py
src/pet_mr_ct/network/: __init__.py  dicom_send.py
src/pet_mr_ct/register/: __init__.py  ants_registration.py
src/pet_mr_ct/segment/: __init__.py  moose.py  runner.py  totalseg.py
src/pet_mr_ct/validate/: __init__.py  roundtrip.py
tests/: conftest.py  test_convert.py  test_roundtrip.py  test_terminology.py
